<resources>
    <string name="app_name">Profile</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_mail">Correo Electronico</string>
    <string name="tv_image_profile">Imagen de perfil</string>
    <string name="hint_web_site">Sitio Web</string>
    <string name="hint_phone_number">Teléfono</string>
    <string name="hint_location">Ubicación</string>
    <string name="main_show_map">Ver en el mapa</string>
    <string name="enable_location">Habilitar ubicación</string>
    <string name="edit_title">Editar datos de usuario</string>
    <string name="hint_lat">Latitúd</string>
    <string name="hint_long">Longitud</string>
    <string name="key_website">llaveWebSite</string>
    <string name="key_name">llaveNombre</string>
    <string name="key_mail">llaveMail</string>
    <string name="key_phone">llavePhone</string>
    <string name="key_latitude">llaveLat</string>
    <string name="key_longitud">llaveLong</string>
</resources>