<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/common_padding_default"
        android:paddingBottom="@dimen/padding_medida_minima_comun">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            app:cardCornerRadius="@dimen/radio_imagen_redonda_perfil"
            app:cardElevation="@dimen/common_padding_default">

            <ImageView
                android:layout_width="@dimen/profile_image_size_large"
                android:layout_height="@dimen/profile_image_size_large"
                android:contentDescription="@string/tv_image_profile"
                android:scaleType="centerCrop"
                android:src="@drawable/cursos_android_ant" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_large"
            tools:text="Cursos Android ANT" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_mail" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            android:textStyle="italic"
            tools:text="luisdmateos@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_web_site" />

        <TextView
            android:id="@+id/tvWebSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            android:textStyle="italic"
            tools:text="www.djdenielb.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_phone_number" />

        <TextView
            android:id="@+id/tv_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_large"
            android:textStyle="bold"
            tools:text="5540373031" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_map"
            android:text="@string/main_show_map"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            android:textStyle="bold"
            app:drawableTint="@color/teal_700" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_large"
            android:text="@string/enable_location"
            android:textSize="@dimen/profile_text_size_middle"
            app:drawableStartCompat="@drawable/ic_settings" />

    </LinearLayout>

</ScrollView>