<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/profile_image_size_large"
            android:layout_height="@dimen/profile_image_size_large">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/radio_imagen_redonda_perfil"
                app:cardElevation="@dimen/common_padding_none">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />
            </androidx.cardview.widget.CardView>
            <ImageButton
                android:id="@+id/btnSelectButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_search"
                android:background="?android:selectableItemBackground"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="@dimen/common_padding_default"
           android:layout_marginTop="@dimen/common_padding_default"
           android:hint="@string/hint_name">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPersonName"/>
       </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_mail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_web_site">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone_number">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default">
<!--Number signed permite poner un signo antes del numero, para este caso lo usamos para poner
coordenadas con numeros negativos, permite signos positivos y negativos, ponemos el imeOptiones
para que el foco pueda avanzar desde latitud a longitud-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/hint_lat"
                android:layout_marginEnd="@dimen/common_padding_default">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/etLongitude"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/hint_long">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>